Projeto/TP2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> DeclBlock CommandBlock
Rule 2     DeclBlock -> DeclBegin Vars DeclEnd
Rule 3     Vars -> Vars Var
Rule 4     Vars -> Var
Rule 5     Var -> intvar
Rule 6     Var -> boolvar
Rule 7     Var -> stringvar
Rule 8     Var -> arrvar
Rule 9     intvar -> IntDecl Name Decl ExpressionI
Rule 10    intvar -> IntDecl Name
Rule 11    boolvar -> BoolDecl Name Decl Bool
Rule 12    boolvar -> BoolDecl Name
Rule 13    stringvar -> StringDecl Name Decl String
Rule 14    stringvar -> StringDecl Name
Rule 15    arrvar -> IntDecl LSQBRACKET Integer RSQBRACKET Name
Rule 16    CommandBlock -> CommandBlock Command
Rule 17    CommandBlock -> Command
Rule 18    Command -> Assign
Rule 19    Assign -> Name ASSIGN ExpressionI
Rule 20    Assign -> Name LSQBRACKET ExpressionI RSQBRACKET ASSIGN ExpressionI
Rule 21    Assign -> Name ASSIGN ExpressionB
Rule 22    Assign -> Name ASSIGN String
Rule 23    Assign -> Name ASSIGN ReadString LPAREN RPAREN
Rule 24    Assign -> Name LSQBRACKET ExpressionI RSQBRACKET ASSIGN ReadString LPAREN RPAREN
Rule 25    PrintableElem -> ExpressionI
Rule 26    PrintableElem -> ExpressionB
Rule 27    PrintableElem -> String
Rule 28    PrintableList -> PrintableList COMMA PrintableElem
Rule 29    PrintableList -> PrintableElem
Rule 30    Command -> WriteString LPAREN PrintableList RPAREN
Rule 31    Command -> Err LPAREN String RPAREN
Rule 32    ExpressionI -> ExpressionI PLUS TermI
Rule 33    ExpressionI -> ExpressionI MINUS TermI
Rule 34    ExpressionI -> TermI
Rule 35    TermI -> TermI TIMES factorI
Rule 36    TermI -> TermI DIVIDE factorI
Rule 37    TermI -> TermI MOD factorI
Rule 38    TermI -> factorI
Rule 39    factorI -> Integer
Rule 40    factorI -> Name
Rule 41    factorI -> Name LSQBRACKET ExpressionI RSQBRACKET
Rule 42    factorI -> LPAREN ExpressionI RPAREN
Rule 43    factorI -> MINUS LPAREN ExpressionI RPAREN
Rule 44    factorI -> MINUS Integer
Rule 45    ExpressionB -> Bool
Rule 46    ExpressionB -> ExpressionB AND ExpressionB
Rule 47    ExpressionB -> ExpressionB OR ExpressionB
Rule 48    ExpressionB -> NOT LPAREN ExpressionB RPAREN
Rule 49    ExpressionB -> LPAREN ExpressionB RPAREN
Rule 50    ExpressionB -> ExpressionI LT ExpressionI
Rule 51    ExpressionB -> ExpressionI LE ExpressionI
Rule 52    ExpressionB -> ExpressionI GT ExpressionI
Rule 53    ExpressionB -> ExpressionI GE ExpressionI
Rule 54    ExpressionB -> ExpressionI EQ ExpressionI
Rule 55    ExpressionB -> ExpressionI NEQ ExpressionI
Rule 56    Command -> IfThenElse
Rule 57    Command -> IfThen
Rule 58    IfThenElse -> If ExpressionB Then LBRACKET CommandBlock RBRACKET Else LBRACKET CommandBlock RBRACKET
Rule 59    IfThen -> If ExpressionB Then LBRACKET CommandBlock RBRACKET
Rule 60    Command -> WhileDo
Rule 61    WhileDo -> While ExpressionB LBRACKET CommandBlock RBRACKET

Terminals, with rules where they appear

AND                  : 46
ASSIGN               : 19 20 21 22 23 24
Bool                 : 11 45
BoolDecl             : 11 12
COMMA                : 28
DIVIDE               : 36
Decl                 : 9 11 13
DeclBegin            : 2
DeclEnd              : 2
EQ                   : 54
Else                 : 58
Err                  : 31
GE                   : 53
GT                   : 52
If                   : 58 59
IntDecl              : 9 10 15
Integer              : 15 39 44
LBRACKET             : 58 58 59 61
LE                   : 51
LPAREN               : 23 24 30 31 42 43 48 49
LSQBRACKET           : 15 20 24 41
LT                   : 50
MINUS                : 33 43 44
MOD                  : 37
NEQ                  : 55
NOT                  : 48
Name                 : 9 10 11 12 13 14 15 19 20 21 22 23 24 40 41
OR                   : 47
PLUS                 : 32
RBRACKET             : 58 58 59 61
RPAREN               : 23 24 30 31 42 43 48 49
RSQBRACKET           : 15 20 24 41
ReadString           : 23 24
String               : 13 22 27 31
StringDecl           : 13 14
TIMES                : 35
Then                 : 58 59
While                : 61
WriteString          : 30
error                : 

Nonterminals, with rules where they appear

Assign               : 18
Command              : 16 17
CommandBlock         : 1 16 58 58 59 61
DeclBlock            : 1
ExpressionB          : 21 26 46 46 47 47 48 49 58 59 61
ExpressionI          : 9 19 20 20 24 25 32 33 41 42 43 50 50 51 51 52 52 53 53 54 54 55 55
IfThen               : 57
IfThenElse           : 56
PrintableElem        : 28 29
PrintableList        : 28 30
Program              : 0
TermI                : 32 33 34 35 36 37
Var                  : 3 4
Vars                 : 2 3
WhileDo              : 60
arrvar               : 8
boolvar              : 6
factorI              : 35 36 37 38
intvar               : 5
stringvar            : 7

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . DeclBlock CommandBlock
    (2) DeclBlock -> . DeclBegin Vars DeclEnd

    DeclBegin       shift and go to state 3

    Program                        shift and go to state 1
    DeclBlock                      shift and go to state 2

state 1

    (0) S' -> Program .



state 2

    (1) Program -> DeclBlock . CommandBlock
    (16) CommandBlock -> . CommandBlock Command
    (17) CommandBlock -> . Command
    (18) Command -> . Assign
    (30) Command -> . WriteString LPAREN PrintableList RPAREN
    (31) Command -> . Err LPAREN String RPAREN
    (56) Command -> . IfThenElse
    (57) Command -> . IfThen
    (60) Command -> . WhileDo
    (19) Assign -> . Name ASSIGN ExpressionI
    (20) Assign -> . Name LSQBRACKET ExpressionI RSQBRACKET ASSIGN ExpressionI
    (21) Assign -> . Name ASSIGN ExpressionB
    (22) Assign -> . Name ASSIGN String
    (23) Assign -> . Name ASSIGN ReadString LPAREN RPAREN
    (24) Assign -> . Name LSQBRACKET ExpressionI RSQBRACKET ASSIGN ReadString LPAREN RPAREN
    (58) IfThenElse -> . If ExpressionB Then LBRACKET CommandBlock RBRACKET Else LBRACKET CommandBlock RBRACKET
    (59) IfThen -> . If ExpressionB Then LBRACKET CommandBlock RBRACKET
    (61) WhileDo -> . While ExpressionB LBRACKET CommandBlock RBRACKET

    WriteString     shift and go to state 7
    Err             shift and go to state 8
    Name            shift and go to state 12
    If              shift and go to state 13
    While           shift and go to state 14

    CommandBlock                   shift and go to state 4
    Command                        shift and go to state 5
    Assign                         shift and go to state 6
    IfThenElse                     shift and go to state 9
    IfThen                         shift and go to state 10
    WhileDo                        shift and go to state 11

state 3

    (2) DeclBlock -> DeclBegin . Vars DeclEnd
    (3) Vars -> . Vars Var
    (4) Vars -> . Var
    (5) Var -> . intvar
    (6) Var -> . boolvar
    (7) Var -> . stringvar
    (8) Var -> . arrvar
    (9) intvar -> . IntDecl Name Decl ExpressionI
    (10) intvar -> . IntDecl Name
    (11) boolvar -> . BoolDecl Name Decl Bool
    (12) boolvar -> . BoolDecl Name
    (13) stringvar -> . StringDecl Name Decl String
    (14) stringvar -> . StringDecl Name
    (15) arrvar -> . IntDecl LSQBRACKET Integer RSQBRACKET Name

    IntDecl         shift and go to state 21
    BoolDecl        shift and go to state 22
    StringDecl      shift and go to state 23

    Vars                           shift and go to state 15
    Var                            shift and go to state 16
    intvar                         shift and go to state 17
    boolvar                        shift and go to state 18
    stringvar                      shift and go to state 19
    arrvar                         shift and go to state 20

state 4

    (1) Program -> DeclBlock CommandBlock .
    (16) CommandBlock -> CommandBlock . Command
    (18) Command -> . Assign
    (30) Command -> . WriteString LPAREN PrintableList RPAREN
    (31) Command -> . Err LPAREN String RPAREN
    (56) Command -> . IfThenElse
    (57) Command -> . IfThen
    (60) Command -> . WhileDo
    (19) Assign -> . Name ASSIGN ExpressionI
    (20) Assign -> . Name LSQBRACKET ExpressionI RSQBRACKET ASSIGN ExpressionI
    (21) Assign -> . Name ASSIGN ExpressionB
    (22) Assign -> . Name ASSIGN String
    (23) Assign -> . Name ASSIGN ReadString LPAREN RPAREN
    (24) Assign -> . Name LSQBRACKET ExpressionI RSQBRACKET ASSIGN ReadString LPAREN RPAREN
    (58) IfThenElse -> . If ExpressionB Then LBRACKET CommandBlock RBRACKET Else LBRACKET CommandBlock RBRACKET
    (59) IfThen -> . If ExpressionB Then LBRACKET CommandBlock RBRACKET
    (61) WhileDo -> . While ExpressionB LBRACKET CommandBlock RBRACKET

    $end            reduce using rule 1 (Program -> DeclBlock CommandBlock .)
    WriteString     shift and go to state 7
    Err             shift and go to state 8
    Name            shift and go to state 12
    If              shift and go to state 13
    While           shift and go to state 14

    Command                        shift and go to state 24
    Assign                         shift and go to state 6
    IfThenElse                     shift and go to state 9
    IfThen                         shift and go to state 10
    WhileDo                        shift and go to state 11

state 5

    (17) CommandBlock -> Command .

    WriteString     reduce using rule 17 (CommandBlock -> Command .)
    Err             reduce using rule 17 (CommandBlock -> Command .)
    Name            reduce using rule 17 (CommandBlock -> Command .)
    If              reduce using rule 17 (CommandBlock -> Command .)
    While           reduce using rule 17 (CommandBlock -> Command .)
    $end            reduce using rule 17 (CommandBlock -> Command .)
    RBRACKET        reduce using rule 17 (CommandBlock -> Command .)


state 6

    (18) Command -> Assign .

    WriteString     reduce using rule 18 (Command -> Assign .)
    Err             reduce using rule 18 (Command -> Assign .)
    Name            reduce using rule 18 (Command -> Assign .)
    If              reduce using rule 18 (Command -> Assign .)
    While           reduce using rule 18 (Command -> Assign .)
    $end            reduce using rule 18 (Command -> Assign .)
    RBRACKET        reduce using rule 18 (Command -> Assign .)


state 7

    (30) Command -> WriteString . LPAREN PrintableList RPAREN

    LPAREN          shift and go to state 25


state 8

    (31) Command -> Err . LPAREN String RPAREN

    LPAREN          shift and go to state 26


state 9

    (56) Command -> IfThenElse .

    WriteString     reduce using rule 56 (Command -> IfThenElse .)
    Err             reduce using rule 56 (Command -> IfThenElse .)
    Name            reduce using rule 56 (Command -> IfThenElse .)
    If              reduce using rule 56 (Command -> IfThenElse .)
    While           reduce using rule 56 (Command -> IfThenElse .)
    $end            reduce using rule 56 (Command -> IfThenElse .)
    RBRACKET        reduce using rule 56 (Command -> IfThenElse .)


state 10

    (57) Command -> IfThen .

    WriteString     reduce using rule 57 (Command -> IfThen .)
    Err             reduce using rule 57 (Command -> IfThen .)
    Name            reduce using rule 57 (Command -> IfThen .)
    If              reduce using rule 57 (Command -> IfThen .)
    While           reduce using rule 57 (Command -> IfThen .)
    $end            reduce using rule 57 (Command -> IfThen .)
    RBRACKET        reduce using rule 57 (Command -> IfThen .)


state 11

    (60) Command -> WhileDo .

    WriteString     reduce using rule 60 (Command -> WhileDo .)
    Err             reduce using rule 60 (Command -> WhileDo .)
    Name            reduce using rule 60 (Command -> WhileDo .)
    If              reduce using rule 60 (Command -> WhileDo .)
    While           reduce using rule 60 (Command -> WhileDo .)
    $end            reduce using rule 60 (Command -> WhileDo .)
    RBRACKET        reduce using rule 60 (Command -> WhileDo .)


state 12

    (19) Assign -> Name . ASSIGN ExpressionI
    (20) Assign -> Name . LSQBRACKET ExpressionI RSQBRACKET ASSIGN ExpressionI
    (21) Assign -> Name . ASSIGN ExpressionB
    (22) Assign -> Name . ASSIGN String
    (23) Assign -> Name . ASSIGN ReadString LPAREN RPAREN
    (24) Assign -> Name . LSQBRACKET ExpressionI RSQBRACKET ASSIGN ReadString LPAREN RPAREN

    ASSIGN          shift and go to state 27
    LSQBRACKET      shift and go to state 28


state 13

    (58) IfThenElse -> If . ExpressionB Then LBRACKET CommandBlock RBRACKET Else LBRACKET CommandBlock RBRACKET
    (59) IfThen -> If . ExpressionB Then LBRACKET CommandBlock RBRACKET
    (45) ExpressionB -> . Bool
    (46) ExpressionB -> . ExpressionB AND ExpressionB
    (47) ExpressionB -> . ExpressionB OR ExpressionB
    (48) ExpressionB -> . NOT LPAREN ExpressionB RPAREN
    (49) ExpressionB -> . LPAREN ExpressionB RPAREN
    (50) ExpressionB -> . ExpressionI LT ExpressionI
    (51) ExpressionB -> . ExpressionI LE ExpressionI
    (52) ExpressionB -> . ExpressionI GT ExpressionI
    (53) ExpressionB -> . ExpressionI GE ExpressionI
    (54) ExpressionB -> . ExpressionI EQ ExpressionI
    (55) ExpressionB -> . ExpressionI NEQ ExpressionI
    (32) ExpressionI -> . ExpressionI PLUS TermI
    (33) ExpressionI -> . ExpressionI MINUS TermI
    (34) ExpressionI -> . TermI
    (35) TermI -> . TermI TIMES factorI
    (36) TermI -> . TermI DIVIDE factorI
    (37) TermI -> . TermI MOD factorI
    (38) TermI -> . factorI
    (39) factorI -> . Integer
    (40) factorI -> . Name
    (41) factorI -> . Name LSQBRACKET ExpressionI RSQBRACKET
    (42) factorI -> . LPAREN ExpressionI RPAREN
    (43) factorI -> . MINUS LPAREN ExpressionI RPAREN
    (44) factorI -> . MINUS Integer

    Bool            shift and go to state 30
    NOT             shift and go to state 31
    LPAREN          shift and go to state 32
    Integer         shift and go to state 37
    Name            shift and go to state 38
    MINUS           shift and go to state 35

    ExpressionB                    shift and go to state 29
    ExpressionI                    shift and go to state 33
    TermI                          shift and go to state 34
    factorI                        shift and go to state 36

state 14

    (61) WhileDo -> While . ExpressionB LBRACKET CommandBlock RBRACKET
    (45) ExpressionB -> . Bool
    (46) ExpressionB -> . ExpressionB AND ExpressionB
    (47) ExpressionB -> . ExpressionB OR ExpressionB
    (48) ExpressionB -> . NOT LPAREN ExpressionB RPAREN
    (49) ExpressionB -> . LPAREN ExpressionB RPAREN
    (50) ExpressionB -> . ExpressionI LT ExpressionI
    (51) ExpressionB -> . ExpressionI LE ExpressionI
    (52) ExpressionB -> . ExpressionI GT ExpressionI
    (53) ExpressionB -> . ExpressionI GE ExpressionI
    (54) ExpressionB -> . ExpressionI EQ ExpressionI
    (55) ExpressionB -> . ExpressionI NEQ ExpressionI
    (32) ExpressionI -> . ExpressionI PLUS TermI
    (33) ExpressionI -> . ExpressionI MINUS TermI
    (34) ExpressionI -> . TermI
    (35) TermI -> . TermI TIMES factorI
    (36) TermI -> . TermI DIVIDE factorI
    (37) TermI -> . TermI MOD factorI
    (38) TermI -> . factorI
    (39) factorI -> . Integer
    (40) factorI -> . Name
    (41) factorI -> . Name LSQBRACKET ExpressionI RSQBRACKET
    (42) factorI -> . LPAREN ExpressionI RPAREN
    (43) factorI -> . MINUS LPAREN ExpressionI RPAREN
    (44) factorI -> . MINUS Integer

    Bool            shift and go to state 30
    NOT             shift and go to state 31
    LPAREN          shift and go to state 32
    Integer         shift and go to state 37
    Name            shift and go to state 38
    MINUS           shift and go to state 35

    ExpressionB                    shift and go to state 39
    ExpressionI                    shift and go to state 33
    TermI                          shift and go to state 34
    factorI                        shift and go to state 36

state 15

    (2) DeclBlock -> DeclBegin Vars . DeclEnd
    (3) Vars -> Vars . Var
    (5) Var -> . intvar
    (6) Var -> . boolvar
    (7) Var -> . stringvar
    (8) Var -> . arrvar
    (9) intvar -> . IntDecl Name Decl ExpressionI
    (10) intvar -> . IntDecl Name
    (11) boolvar -> . BoolDecl Name Decl Bool
    (12) boolvar -> . BoolDecl Name
    (13) stringvar -> . StringDecl Name Decl String
    (14) stringvar -> . StringDecl Name
    (15) arrvar -> . IntDecl LSQBRACKET Integer RSQBRACKET Name

    DeclEnd         shift and go to state 40
    IntDecl         shift and go to state 21
    BoolDecl        shift and go to state 22
    StringDecl      shift and go to state 23

    Var                            shift and go to state 41
    intvar                         shift and go to state 17
    boolvar                        shift and go to state 18
    stringvar                      shift and go to state 19
    arrvar                         shift and go to state 20

state 16

    (4) Vars -> Var .

    DeclEnd         reduce using rule 4 (Vars -> Var .)
    IntDecl         reduce using rule 4 (Vars -> Var .)
    BoolDecl        reduce using rule 4 (Vars -> Var .)
    StringDecl      reduce using rule 4 (Vars -> Var .)


state 17

    (5) Var -> intvar .

    DeclEnd         reduce using rule 5 (Var -> intvar .)
    IntDecl         reduce using rule 5 (Var -> intvar .)
    BoolDecl        reduce using rule 5 (Var -> intvar .)
    StringDecl      reduce using rule 5 (Var -> intvar .)


state 18

    (6) Var -> boolvar .

    DeclEnd         reduce using rule 6 (Var -> boolvar .)
    IntDecl         reduce using rule 6 (Var -> boolvar .)
    BoolDecl        reduce using rule 6 (Var -> boolvar .)
    StringDecl      reduce using rule 6 (Var -> boolvar .)


state 19

    (7) Var -> stringvar .

    DeclEnd         reduce using rule 7 (Var -> stringvar .)
    IntDecl         reduce using rule 7 (Var -> stringvar .)
    BoolDecl        reduce using rule 7 (Var -> stringvar .)
    StringDecl      reduce using rule 7 (Var -> stringvar .)


state 20

    (8) Var -> arrvar .

    DeclEnd         reduce using rule 8 (Var -> arrvar .)
    IntDecl         reduce using rule 8 (Var -> arrvar .)
    BoolDecl        reduce using rule 8 (Var -> arrvar .)
    StringDecl      reduce using rule 8 (Var -> arrvar .)


state 21

    (9) intvar -> IntDecl . Name Decl ExpressionI
    (10) intvar -> IntDecl . Name
    (15) arrvar -> IntDecl . LSQBRACKET Integer RSQBRACKET Name

    Name            shift and go to state 42
    LSQBRACKET      shift and go to state 43


state 22

    (11) boolvar -> BoolDecl . Name Decl Bool
    (12) boolvar -> BoolDecl . Name

    Name            shift and go to state 44


state 23

    (13) stringvar -> StringDecl . Name Decl String
    (14) stringvar -> StringDecl . Name

    Name            shift and go to state 45


state 24

    (16) CommandBlock -> CommandBlock Command .

    WriteString     reduce using rule 16 (CommandBlock -> CommandBlock Command .)
    Err             reduce using rule 16 (CommandBlock -> CommandBlock Command .)
    Name            reduce using rule 16 (CommandBlock -> CommandBlock Command .)
    If              reduce using rule 16 (CommandBlock -> CommandBlock Command .)
    While           reduce using rule 16 (CommandBlock -> CommandBlock Command .)
    $end            reduce using rule 16 (CommandBlock -> CommandBlock Command .)
    RBRACKET        reduce using rule 16 (CommandBlock -> CommandBlock Command .)


state 25

    (30) Command -> WriteString LPAREN . PrintableList RPAREN
    (28) PrintableList -> . PrintableList COMMA PrintableElem
    (29) PrintableList -> . PrintableElem
    (25) PrintableElem -> . ExpressionI
    (26) PrintableElem -> . ExpressionB
    (27) PrintableElem -> . String
    (32) ExpressionI -> . ExpressionI PLUS TermI
    (33) ExpressionI -> . ExpressionI MINUS TermI
    (34) ExpressionI -> . TermI
    (45) ExpressionB -> . Bool
    (46) ExpressionB -> . ExpressionB AND ExpressionB
    (47) ExpressionB -> . ExpressionB OR ExpressionB
    (48) ExpressionB -> . NOT LPAREN ExpressionB RPAREN
    (49) ExpressionB -> . LPAREN ExpressionB RPAREN
    (50) ExpressionB -> . ExpressionI LT ExpressionI
    (51) ExpressionB -> . ExpressionI LE ExpressionI
    (52) ExpressionB -> . ExpressionI GT ExpressionI
    (53) ExpressionB -> . ExpressionI GE ExpressionI
    (54) ExpressionB -> . ExpressionI EQ ExpressionI
    (55) ExpressionB -> . ExpressionI NEQ ExpressionI
    (35) TermI -> . TermI TIMES factorI
    (36) TermI -> . TermI DIVIDE factorI
    (37) TermI -> . TermI MOD factorI
    (38) TermI -> . factorI
    (39) factorI -> . Integer
    (40) factorI -> . Name
    (41) factorI -> . Name LSQBRACKET ExpressionI RSQBRACKET
    (42) factorI -> . LPAREN ExpressionI RPAREN
    (43) factorI -> . MINUS LPAREN ExpressionI RPAREN
    (44) factorI -> . MINUS Integer

    String          shift and go to state 50
    Bool            shift and go to state 30
    NOT             shift and go to state 31
    LPAREN          shift and go to state 32
    Integer         shift and go to state 37
    Name            shift and go to state 38
    MINUS           shift and go to state 35

    PrintableList                  shift and go to state 46
    PrintableElem                  shift and go to state 47
    ExpressionI                    shift and go to state 48
    ExpressionB                    shift and go to state 49
    TermI                          shift and go to state 34
    factorI                        shift and go to state 36

state 26

    (31) Command -> Err LPAREN . String RPAREN

    String          shift and go to state 51


state 27

    (19) Assign -> Name ASSIGN . ExpressionI
    (21) Assign -> Name ASSIGN . ExpressionB
    (22) Assign -> Name ASSIGN . String
    (23) Assign -> Name ASSIGN . ReadString LPAREN RPAREN
    (32) ExpressionI -> . ExpressionI PLUS TermI
    (33) ExpressionI -> . ExpressionI MINUS TermI
    (34) ExpressionI -> . TermI
    (45) ExpressionB -> . Bool
    (46) ExpressionB -> . ExpressionB AND ExpressionB
    (47) ExpressionB -> . ExpressionB OR ExpressionB
    (48) ExpressionB -> . NOT LPAREN ExpressionB RPAREN
    (49) ExpressionB -> . LPAREN ExpressionB RPAREN
    (50) ExpressionB -> . ExpressionI LT ExpressionI
    (51) ExpressionB -> . ExpressionI LE ExpressionI
    (52) ExpressionB -> . ExpressionI GT ExpressionI
    (53) ExpressionB -> . ExpressionI GE ExpressionI
    (54) ExpressionB -> . ExpressionI EQ ExpressionI
    (55) ExpressionB -> . ExpressionI NEQ ExpressionI
    (35) TermI -> . TermI TIMES factorI
    (36) TermI -> . TermI DIVIDE factorI
    (37) TermI -> . TermI MOD factorI
    (38) TermI -> . factorI
    (39) factorI -> . Integer
    (40) factorI -> . Name
    (41) factorI -> . Name LSQBRACKET ExpressionI RSQBRACKET
    (42) factorI -> . LPAREN ExpressionI RPAREN
    (43) factorI -> . MINUS LPAREN ExpressionI RPAREN
    (44) factorI -> . MINUS Integer

    String          shift and go to state 54
    ReadString      shift and go to state 55
    Bool            shift and go to state 30
    NOT             shift and go to state 31
    LPAREN          shift and go to state 32
    Integer         shift and go to state 37
    Name            shift and go to state 38
    MINUS           shift and go to state 35

    ExpressionI                    shift and go to state 52
    ExpressionB                    shift and go to state 53
    TermI                          shift and go to state 34
    factorI                        shift and go to state 36

state 28

    (20) Assign -> Name LSQBRACKET . ExpressionI RSQBRACKET ASSIGN ExpressionI
    (24) Assign -> Name LSQBRACKET . ExpressionI RSQBRACKET ASSIGN ReadString LPAREN RPAREN
    (32) ExpressionI -> . ExpressionI PLUS TermI
    (33) ExpressionI -> . ExpressionI MINUS TermI
    (34) ExpressionI -> . TermI
    (35) TermI -> . TermI TIMES factorI
    (36) TermI -> . TermI DIVIDE factorI
    (37) TermI -> . TermI MOD factorI
    (38) TermI -> . factorI
    (39) factorI -> . Integer
    (40) factorI -> . Name
    (41) factorI -> . Name LSQBRACKET ExpressionI RSQBRACKET
    (42) factorI -> . LPAREN ExpressionI RPAREN
    (43) factorI -> . MINUS LPAREN ExpressionI RPAREN
    (44) factorI -> . MINUS Integer

    Integer         shift and go to state 37
    Name            shift and go to state 38
    LPAREN          shift and go to state 57
    MINUS           shift and go to state 35

    ExpressionI                    shift and go to state 56
    TermI                          shift and go to state 34
    factorI                        shift and go to state 36

state 29

    (58) IfThenElse -> If ExpressionB . Then LBRACKET CommandBlock RBRACKET Else LBRACKET CommandBlock RBRACKET
    (59) IfThen -> If ExpressionB . Then LBRACKET CommandBlock RBRACKET
    (46) ExpressionB -> ExpressionB . AND ExpressionB
    (47) ExpressionB -> ExpressionB . OR ExpressionB

    Then            shift and go to state 58
    AND             shift and go to state 59
    OR              shift and go to state 60


state 30

    (45) ExpressionB -> Bool .

    Then            reduce using rule 45 (ExpressionB -> Bool .)
    AND             reduce using rule 45 (ExpressionB -> Bool .)
    OR              reduce using rule 45 (ExpressionB -> Bool .)
    LBRACKET        reduce using rule 45 (ExpressionB -> Bool .)
    RPAREN          reduce using rule 45 (ExpressionB -> Bool .)
    COMMA           reduce using rule 45 (ExpressionB -> Bool .)
    WriteString     reduce using rule 45 (ExpressionB -> Bool .)
    Err             reduce using rule 45 (ExpressionB -> Bool .)
    Name            reduce using rule 45 (ExpressionB -> Bool .)
    If              reduce using rule 45 (ExpressionB -> Bool .)
    While           reduce using rule 45 (ExpressionB -> Bool .)
    $end            reduce using rule 45 (ExpressionB -> Bool .)
    RBRACKET        reduce using rule 45 (ExpressionB -> Bool .)


state 31

    (48) ExpressionB -> NOT . LPAREN ExpressionB RPAREN

    LPAREN          shift and go to state 61


state 32

    (49) ExpressionB -> LPAREN . ExpressionB RPAREN
    (42) factorI -> LPAREN . ExpressionI RPAREN
    (45) ExpressionB -> . Bool
    (46) ExpressionB -> . ExpressionB AND ExpressionB
    (47) ExpressionB -> . ExpressionB OR ExpressionB
    (48) ExpressionB -> . NOT LPAREN ExpressionB RPAREN
    (49) ExpressionB -> . LPAREN ExpressionB RPAREN
    (50) ExpressionB -> . ExpressionI LT ExpressionI
    (51) ExpressionB -> . ExpressionI LE ExpressionI
    (52) ExpressionB -> . ExpressionI GT ExpressionI
    (53) ExpressionB -> . ExpressionI GE ExpressionI
    (54) ExpressionB -> . ExpressionI EQ ExpressionI
    (55) ExpressionB -> . ExpressionI NEQ ExpressionI
    (32) ExpressionI -> . ExpressionI PLUS TermI
    (33) ExpressionI -> . ExpressionI MINUS TermI
    (34) ExpressionI -> . TermI
    (35) TermI -> . TermI TIMES factorI
    (36) TermI -> . TermI DIVIDE factorI
    (37) TermI -> . TermI MOD factorI
    (38) TermI -> . factorI
    (39) factorI -> . Integer
    (40) factorI -> . Name
    (41) factorI -> . Name LSQBRACKET ExpressionI RSQBRACKET
    (42) factorI -> . LPAREN ExpressionI RPAREN
    (43) factorI -> . MINUS LPAREN ExpressionI RPAREN
    (44) factorI -> . MINUS Integer

    Bool            shift and go to state 30
    NOT             shift and go to state 31
    LPAREN          shift and go to state 32
    Integer         shift and go to state 37
    Name            shift and go to state 38
    MINUS           shift and go to state 35

    ExpressionB                    shift and go to state 62
    ExpressionI                    shift and go to state 63
    TermI                          shift and go to state 34
    factorI                        shift and go to state 36

state 33

    (50) ExpressionB -> ExpressionI . LT ExpressionI
    (51) ExpressionB -> ExpressionI . LE ExpressionI
    (52) ExpressionB -> ExpressionI . GT ExpressionI
    (53) ExpressionB -> ExpressionI . GE ExpressionI
    (54) ExpressionB -> ExpressionI . EQ ExpressionI
    (55) ExpressionB -> ExpressionI . NEQ ExpressionI
    (32) ExpressionI -> ExpressionI . PLUS TermI
    (33) ExpressionI -> ExpressionI . MINUS TermI

    LT              shift and go to state 64
    LE              shift and go to state 65
    GT              shift and go to state 66
    GE              shift and go to state 67
    EQ              shift and go to state 68
    NEQ             shift and go to state 69
    PLUS            shift and go to state 70
    MINUS           shift and go to state 71


state 34

    (34) ExpressionI -> TermI .
    (35) TermI -> TermI . TIMES factorI
    (36) TermI -> TermI . DIVIDE factorI
    (37) TermI -> TermI . MOD factorI

    LT              reduce using rule 34 (ExpressionI -> TermI .)
    LE              reduce using rule 34 (ExpressionI -> TermI .)
    GT              reduce using rule 34 (ExpressionI -> TermI .)
    GE              reduce using rule 34 (ExpressionI -> TermI .)
    EQ              reduce using rule 34 (ExpressionI -> TermI .)
    NEQ             reduce using rule 34 (ExpressionI -> TermI .)
    PLUS            reduce using rule 34 (ExpressionI -> TermI .)
    MINUS           reduce using rule 34 (ExpressionI -> TermI .)
    RPAREN          reduce using rule 34 (ExpressionI -> TermI .)
    COMMA           reduce using rule 34 (ExpressionI -> TermI .)
    WriteString     reduce using rule 34 (ExpressionI -> TermI .)
    Err             reduce using rule 34 (ExpressionI -> TermI .)
    Name            reduce using rule 34 (ExpressionI -> TermI .)
    If              reduce using rule 34 (ExpressionI -> TermI .)
    While           reduce using rule 34 (ExpressionI -> TermI .)
    $end            reduce using rule 34 (ExpressionI -> TermI .)
    RBRACKET        reduce using rule 34 (ExpressionI -> TermI .)
    RSQBRACKET      reduce using rule 34 (ExpressionI -> TermI .)
    Then            reduce using rule 34 (ExpressionI -> TermI .)
    AND             reduce using rule 34 (ExpressionI -> TermI .)
    OR              reduce using rule 34 (ExpressionI -> TermI .)
    LBRACKET        reduce using rule 34 (ExpressionI -> TermI .)
    DeclEnd         reduce using rule 34 (ExpressionI -> TermI .)
    IntDecl         reduce using rule 34 (ExpressionI -> TermI .)
    BoolDecl        reduce using rule 34 (ExpressionI -> TermI .)
    StringDecl      reduce using rule 34 (ExpressionI -> TermI .)
    TIMES           shift and go to state 72
    DIVIDE          shift and go to state 73
    MOD             shift and go to state 74


state 35

    (43) factorI -> MINUS . LPAREN ExpressionI RPAREN
    (44) factorI -> MINUS . Integer

    LPAREN          shift and go to state 75
    Integer         shift and go to state 76


state 36

    (38) TermI -> factorI .
